force-app/main/default/objects/TemplateAnalytics__c/TemplateAnalytics__c.object-meta.xml
<CustomObject>
    <label>Template Analytics</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Template Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>