force-app/main/default/objects/TemplateAnalytics__c/fields/AmountSpent__c.field-meta.xml
<CustomField>
    <fullName>AmountSpent__c</fullName>
    <label>Amount Spent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>