force-app/main/default/objects/TemplateAnalytics__c/fields/CostPerDelivered__c.field-meta.xml
<CustomField>
    <fullName>CostPerDelivered__c</fullName>
    <label>Cost Per Delivered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>