force-app/main/default/objects/TemplateAnalytics__c/fields/CostPerUrlButtonClick__c.field-meta.xml
<CustomField>
    <fullName>CostPerUrlButtonClick__c</fullName>
    <label>Cost Per Url Button Click</label>
    <length>100</length>
    <type>Text</type>
</CustomField>