force-app/main/default/objects/TemplateAnalytics__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <label>Delivered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>