force-app/main/default/objects/TemplateAnalytics__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <label>Read</label>
    <length>100</length>
    <type>Text</type>
</CustomField>