force-app/main/default/objects/TemplateAnalytics__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <label>Sent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>