force-app/main/default/objects/TemplateAnalytics__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>