force-app/main/default/objects/TemplateAnalytics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TemplateId__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Sent__c</columns>
    <columns>Read__c</columns>
    <columns>Delivered__c</columns>
    <columns>AmountSpent__c</columns>
    <columns>CostPerDelivered__c</columns>
    <columns>CostPerUrlButtonClick__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>